@@ -117,6 +117,7 @@ export(rtree)
 export(scaleClade)
 export(scale_color)
 export(scale_x_ggtree)
+export(set_tree_xlim)
 export(stat_balance)
 export(stat_hilight)
 export(subview)
@@ -189,6 +190,7 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,fortify)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_blank)
 importFrom(ggplot2,geom_rect)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
